# pretrain-LLM-from-scratch

./: .gitignore  LoadBalancingCheck.py  README.md  chat_demo.py  chat_demo_rollout.py  continue_writing_demo.py  ds_zero.json  grpo.sh  pretrain.py  pretrain.sh  pretrain_wo_ds.sh  pyproject.toml  requirements.txt  some_test.py
HolmesLLMXS/: config.json  configuration_holmesllm.py  modeling_holmesllm.py  whatisthis.md
SFT/: holmes_full_sft.yaml  preprocess.yaml  train.pbs  train.sh
SFT/LLaMA-Factory/data/: dataset_info.json
data/: data_process.py  file_meta.py  prepare_baidubaike.py  prepare_jiangshu.py  prepare_skypile.py  prepare_wiki.py
data/aug/: inference.py  prompt_templates.py
data/aug/trans/: trans_ShareGPT_en_qa.py  translate_FineWeb_en.py  translate_FineWeb_zh.py  (+1 more)
data/gen_token/: finemath_token.py  fineweb_token.py  generate_token.py  re_cut.py  seq_monkey_token.py  tran_dic_csv_token.py  tran_dic_token.py  translate_FineWeb_en_token.py  translate_FineWeb_zh_token.py  translate_WritingPromptsX_token.py  translate_quickmt_token.py
data/skypile/: depadding.py  get_files.py  prepare_jiangshu.py  url2.txt  verifier.py
debug/: debugging.py
ds3_pretrain_ckpts/: moe_load_stats.jsonl
evaluation/: evaluate_gsm8k.py  gsm8k_prompt.txt
model/: config.json  config_small.json  configuration_holmes.py  generation_config.json  modeling_holmes.py  modeling_holmesllm.py  run_test.py  tokenizer_config.json
tokenizer/: config.json  tokenizer_config.json
train/: grpo_train.py  training.py  zero3.yaml
vocab_base/: tokenizer.json  tokenizer_config.json
(+6 files in other folders)
