[project]
name = "pretrain-llm-from-scratch"
version = "0.1.0"
description = "从0训练类 o1 大语言模型。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
default-groups = ["rl"]

[project.optional-dependencies]
vllm = [
    "vllm>=0.8.2",
]

[dependency-groups]
pretrain = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "deepspeed>=0.16.4",
    "flash-attn>=2.7.4.post1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.1",
]
rl = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "trl>=0.16.0",
    "wandb>=0.19.8",
]
